--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ nav ul li{
     border: 2px solid black;
     border-radius: 10px;
     padding: 15px;
+    list-style-type: disc;
 }
 
 nav ul li a{
@@ -99,3 +100,9 @@ h3{
 h1{
     text-transform: uppercase;
 }
+
+h4{
+    font-size: 20px;
+    font-weight: 600;
+}
+
